remove link int0612

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
@@ -116,6 +116,10 @@
           </tr>
         </thead>
       </table><br>
+      
+      <div class="ui stackable center aligned page grid">        
+        <a class="ui mini gray button " href="#" routerLink="/int06/1/1"><i class="reply icon"></i>จบการทำงาน</a>
+      </div><br>
     </div>
 
     <!-- modal detail -->
