--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-8/int08-3-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-8/int08-3-8.component.html
@@ -99,8 +99,8 @@
             <tr>
               <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
               <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
-              <th rowspan="2" style="text-align: center !important">จำนวนค่าปรับ</th>
-              <th rowspan="2" style="text-align: center !important">ประมาณการค่าปรับ</th>
+              <th rowspan="2" style="text-align: center !important">จำนวนคดี</th>
+              <th rowspan="2" style="text-align: center !important">ประมาณการจำนวนคดี</th>
               <th rowspan="2" style="text-align: center !important">ผลต่าง</th>
               <th rowspan="2" style="text-align: center !important">อัตราสูงต่ำ</th>
               <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
