--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-1/int07-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-1/int07-1.component.html
@@ -14,7 +14,7 @@
                         <label class="text-right full-width">รายงานงบทดลอง</label>
                     </div>
                     <div class="five wide field">
-                        <input id="fileExcel" type="file" name="fileExcel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" (change)="changeUpload($event)" required>
+                        <input id="fileExcel" type="file" name="fileExcel" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-excel" (change)="changeUpload($event)" required>
                     </div>
                     <div class="three wide field"></div>
                 </div>
