--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-8/int01-8-1/int01-8-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-8/int01-8-1/int01-8-1.component.html
@@ -77,9 +77,9 @@
       <br />
       <br />
       <div id="Int0181">
-        <table id="dataTable" class="ui  small celled table striped selectable">
+        <table id="dataTable" class="ui  small celled table striped selectable" width = "100%">
           <thead>
-            <tr style="text-align: center;">
+            <tr style="text-align: center">
               <th>ลำดับที่</th>
               <th>วัน/เดือน/ปี ที่จัดเก็บรายได้</th>
               <th>จำนวนเงินที่จัดเก็บ</th>
@@ -89,6 +89,7 @@
             </tr>
           </thead>
         </table>
+        <div class="ui center aligned grid">
         <div class="eight wide center aligned column">
           <button class="ui mini yellow button" [routerLink]="[ '/int07/2'] ">
             <i class="print icon"></i>
@@ -98,6 +99,7 @@
             <i class="close  icon"></i>
             ยกเลิก
           </button>
+        </div>
         </div>
       </div>
     </div>
