--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4.component.html
@@ -100,12 +100,12 @@
                     <tr style="text-align: center">
                         <th rowspan="2"><input class="ui checkbox" type="checkbox" (change)="clickCheckAll($event)"></th>
                         <th rowspan="2">ปีงบประมาณ</th>
-                        <th rowspan="2">เลขทีหนังสืออนุมัติเบิกจ่าย</th>
-                        <th rowspan="2">เลข EGP</th>
+                        <th rowspan="2">เลขที่หนังสืออนุมัติเบิกจ่าย</th>
+                        <th rowspan="2">เลขที่โครงการในระบบ e-GP</th>
                         <th rowspan="2">ชื่อโครงการ</th>
                         <th rowspan="2">จำนวนเงิน ซื้อ/จ้าง/เช่า</th>
-                        <th rowspan="2">สถานะ</th>
-                        <th rowspan="2">อัพเดท</th>
+                        <th rowspan="2">สถานะการดำเนินงาน</th>
+                        <th rowspan="2">วันที่ทำรายการล่าสุด</th>
                         <th rowspan="1" colspan="2">จัดการ</th>
                     </tr>
                     <tr style="display:none">
