--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
@@ -88,7 +88,7 @@
                 <br>
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
-                        <button class="ui mini green button" (click)="compareTR()">
+                        <button *ngIf="comboBoxId === '1322'" class="ui mini green button" (click)="compareTR()">
                     <i class="clipboard check icon"></i> 
                     เปรียบเทียบ TR
                   </button>
