--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
@@ -21,7 +21,8 @@
                         <div class="ui calendar" id="calendar">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="calendar" autocomplete="off" id="calendar_data" name="calendar_data" placeholder="ปปปป" autocomplete="off" ngModel readonly>
+                                <input type="calendar" autocomplete="off" id="calendar_data" name="calendar_data" placeholder="ปปปป" autocomplete="off" ngModel
+                                    readonly>
                             </div>
                         </div>
                     </div>
@@ -107,7 +108,8 @@
                         <div class="ui calendar" id="operationstartCal">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="calendar" autocomplete="off" name="operationstart" id="operationstart" placeholder="วว/ดด/ปปปป" autocomplete="off" ngModel readonly>
+                                <input type="calendar" autocomplete="off" name="operationstart" id="operationstart" placeholder="วว/ดด/ปปปป" autocomplete="off"
+                                    ngModel readonly>
                             </div>
                         </div>
                     </div>
@@ -120,7 +122,8 @@
                         <div class="ui calendar" id="operationendCal">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="calendar" autocomplete="off" name="operationend" id="operationend" placeholder="วว/ดด/ปปปป" autocomplete="off" ngModel readonly>
+                                <input type="calendar" autocomplete="off" name="operationend" id="operationend" placeholder="วว/ดด/ปปปป" autocomplete="off"
+                                    ngModel readonly>
                             </div>
                         </div>
                     </div>
@@ -135,9 +138,9 @@
                         <table id="table1" class="ui small celled table striped selectable" style="width: 100%;">
                             <thead>
                                 <tr style="text-align: center;">
-                                    <th rowspan="2">รายการจัดซื้อจัดจ้าง</th>
+                                    <th rowspan="2">รายการจัดซื้อจัดจ้าง <span style = "color: red">*</span></th>
                                     <th rowspan="2">จำนวน</th>
-                                    <th rowspan="2">หน่วยนับ</th>
+                                    <th rowspan="2">หน่วยนับ <span style = "color: red">*</span></th>
                                     <th rowspan="2">ราคาที่ตั้งไว้ต่อหน่วย</th>
                                     <th rowspan="2">ราคากลางต่อหน่วย</th>
                                     <th rowspan="2">ราคาซื้อ/จ้าง/เช่า ต่อหน่วย</th>
@@ -146,7 +149,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let min of numbers; let i = index">
+                                <tr *ngFor="let min of numbers; let i = index" style="text-align: center">
                                     <td>
                                         <div class="field full-padding {{flagValidate1_[i] == false? 'error': ''}}">
                                             <input type="text" name="procurementList{{i}}" id="procurementList{{i}}">
@@ -154,7 +157,7 @@
                                     </td>
                                     <td>
                                         <div class="field full-padding {{flagValidate2_[i] == false? 'error': ''}}">
-                                            <input type="number" name="amount{{i}}" id="amount{{i}}" [attr.min]="0" value="0">
+                                            <input style="text-align: right" type="number" name="amount{{i}}" id="amount{{i}}" [attr.min]="0" value="0">
                                         </div>
                                     </td>
                                     <td>
@@ -164,21 +167,22 @@
                                     </td>
                                     <td>
                                         <div class="field full-padding {{flagValidate4_[i] == false? 'error': ''}}">
-                                            <input type="number" name="presetPrice{{i}}" id="presetPrice{{i}}" [attr.min]="0" value="0">
+                                            <input style="text-align: right" type="number" name="presetPrice{{i}}" id="presetPrice{{i}}" [attr.min]="0" value="0">
                                         </div>
                                     </td>
                                     <td>
                                         <div class="field full-padding {{flagValidate5_[i] == false? 'error': ''}}">
-                                            <input type="number" name="appraisalPrice{{i}}" id="appraisalPrice{{i}}" [attr.min]="0" value="0">
+                                            <input style="text-align: right" type="number" name="appraisalPrice{{i}}" id="appraisalPrice{{i}}" [attr.min]="0" value="0">
                                         </div>
                                     </td>
                                     <td>
                                         <div class="field full-padding {{flagValidate6_[i] == false? 'error': ''}}">
-                                            <input type="number" name="unitPrice{{i}}" id="unitPrice{{i}}" [attr.min]="0" value="0">
+                                            <input style="text-align: right" type="number" name="unitPrice{{i}}" id="unitPrice{{i}}" [attr.min]="0" value="0">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="field full-padding {{flagValidate7_[i] == false? 'error': ''}}"><input type="number" name="price{{i}}" id="price{{i}}" [attr.min]="0" value="0">
+                                        <div class="field full-padding {{flagValidate7_[i] == false? 'error': ''}}">
+                                            <input type="number" name="price{{i}}" id="price{{i}}" [attr.min]="0" value="0">
                                         </div>
                                     </td>
                                     <td style="text-align: center;">
@@ -244,8 +248,8 @@
 
                     <div class="six wide field ">
                         <select class="ui search dropdown ai search" name="supplyChoice" id="supplyChoice" [(ngModel)]="supplyChoice" (change)="onChangeChoice()">
-                            <option value="">กรุณาเลือก</option>  
-                            <option *ngFor="let item of supplyChoiceList | async" value="{{item.value1}}">{{item.value1}}</option>                                
+                            <option value="">กรุณาเลือก</option>
+                            <option *ngFor="let item of supplyChoiceList | async" value="{{item.value1}}">{{item.value1}}</option>
                         </select>
                     </div>
 
@@ -491,7 +495,7 @@
 
                 <button class="ui mini tiny primary button" type="submit">
                     <i class="save icon"></i> บันทึก
-            </button>
+                </button>
             </form>
         </div>
     </div>
@@ -926,7 +930,7 @@
 
                 <button class="ui mini tiny primary button" type="submit">
                     <i class="save icon"></i> บันทึก
-            </button>
+                </button>
             </form>
         </div>
     </div>
