--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
@@ -28,18 +28,16 @@
 
             <div class="ui center aligned grid">
                 <div class="eight wide column">
-                    <button class="ui mini primary button width-100" routerLink="/int07/1">    
-                <i class="reply icon"></i>
-             กลับ
-            </button>
-
-                    <button class="ui mini primary button width-100" (click)="onExport()">    
-                <i class="print icon"></i>
-             ส่งออก
-            </button>
+                    <button class="ui mini yellow button width-100" (click)="onExport()">
+                        <i class="print icon"></i>
+                        ส่งออก
+                    </button>
+                    <button class="ui mini button width-100" routerLink="/int07/1">
+                        <i class="close icon"></i>
+                        ยกเลิก
+                    </button>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
